packaging the project for more projects

--- a/Portfolio simulation/Porfolio simulation.ipynb
+++ b/Portfolio simulation/Porfolio simulation.ipynb
@@ -25,12 +25,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Monte Carlo as a tool for option pricing\n",
+    "# Monte Carlo as a tool for stock portfolio simulation\n",
     "Financial mathematics used in calculating risk-neutral pricing by simulating risk-neutral asset paths\n",
     "\n",
     "This is done by discounting risk-free rate to calculate present value of option price for different paths\n",
     "\n",
-    "Goal: average out option price for the different paths produced by monte carlo"
+    "Goal: portfolio simulation to capture randomness and compute value at risk"
    ]
   },
   {
